# WebRTC-audio-processing

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  fullaec.m  run.sh  speex_aec.m
data/: addednoise.raw  far_16KHz_16i.raw  out_1.raw  out_2.raw  speech_16k.raw  speech_16k_echo.raw
src/: webrtc_audio_processing.cc
src/test/: process_test.cc
webrtc-audio-processing/: .gitignore  AUTHORS  Makefile.am  NEWS  README.md  UPDATING.md  autogen.sh  configure.ac  webrtc-audio-processing.pc.in
webrtc-audio-processing/webrtc/: Makefile.am
webrtc-audio-processing/webrtc/base/: Makefile.am  win32.h
webrtc-audio-processing/webrtc/common_audio/: Makefile.am  channel_buffer.h
webrtc-audio-processing/webrtc/common_audio/resampler/: sinc_resampler.h
webrtc-audio-processing/webrtc/common_audio/vad/: vad_core.c  vad_filterbank.c
webrtc-audio-processing/webrtc/modules/: Makefile.am
webrtc-audio-processing/webrtc/modules/audio_coding/: Makefile.am
webrtc-audio-processing/webrtc/modules/audio_coding/codecs/isac/main/source/: entropy_coding.c
webrtc-audio-processing/webrtc/modules/audio_processing/: Makefile.am  high_pass_filter_impl.cc  noise_suppression_impl.cc
webrtc-audio-processing/webrtc/modules/audio_processing/aec/: aec_core.c  echo_cancellation.c
webrtc-audio-processing/webrtc/modules/audio_processing/beamformer/: nonlinear_beamformer.h
webrtc-audio-processing/webrtc/modules/audio_processing/intelligibility/: intelligibility_enhancer.h
webrtc-audio-processing/webrtc/modules/audio_processing/ns/: ns_core.c
webrtc-audio-processing/webrtc/modules/audio_processing/test/: protobuf_utils.h
webrtc-audio-processing/webrtc/modules/audio_processing/transient/: transient_suppressor.h
webrtc-audio-processing/webrtc/system_wrappers/: Makefile.am
