noinst_LTLIBRARIES = libaudio_coding.la

libaudio_coding_la_SOURCES = codecs/isac/main/include/isac.h \
			     codecs/isac/main/source/arith_routines.c \
			     codecs/isac/main/source/arith_routines.h \
			     codecs/isac/main/source/arith_routines_hist.c \
			     codecs/isac/main/source/arith_routines_logist.c \
			     codecs/isac/main/source/codec.h \
			     codecs/isac/main/source/encode_lpc_swb.c \
			     codecs/isac/main/source/encode_lpc_swb.h \
			     codecs/isac/main/source/entropy_coding.c \
			     codecs/isac/main/source/entropy_coding.h \
			     codecs/isac/main/source/filter_functions.c \
			     codecs/isac/main/source/filterbanks.c \
			     codecs/isac/main/source/filterbank_tables.c \
			     codecs/isac/main/source/filterbank_tables.h \
			     codecs/isac/main/source/intialize.c \
			     codecs/isac/main/source/lpc_analysis.c \
			     codecs/isac/main/source/lpc_analysis.h \
			     codecs/isac/main/source/lpc_gain_swb_tables.c \
			     codecs/isac/main/source/lpc_gain_swb_tables.h \
			     codecs/isac/main/source/lpc_shape_swb12_tables.c \
			     codecs/isac/main/source/lpc_shape_swb12_tables.h \
			     codecs/isac/main/source/lpc_shape_swb16_tables.c \
			     codecs/isac/main/source/lpc_shape_swb16_tables.h \
			     codecs/isac/main/source/lpc_tables.c \
			     codecs/isac/main/source/lpc_tables.h \
			     codecs/isac/main/source/os_specific_inline.h \
			     codecs/isac/main/source/pitch_estimator.c \
			     codecs/isac/main/source/pitch_estimator.h \
			     codecs/isac/main/source/pitch_filter.c \
			     codecs/isac/main/source/pitch_gain_tables.c \
			     codecs/isac/main/source/pitch_gain_tables.h \
			     codecs/isac/main/source/pitch_lag_tables.c \
			     codecs/isac/main/source/pitch_lag_tables.h \
			     codecs/isac/main/source/settings.h \
			     codecs/isac/main/source/spectrum_ar_model_tables.c \
			     codecs/isac/main/source/spectrum_ar_model_tables.h \
			     codecs/isac/main/source/structs.h \
			     codecs/isac/bandwidth_info.h

libaudio_coding_la_CFLAGS = $(AM_CFLAGS) $(COMMON_CFLAGS)
libaudio_coding_la_CXXFLAGS = $(AM_CXXFLAGS) $(COMMON_CXXFLAGS)

EXTRA_DIST = BUILD.gn
